# HelloWorld-AI

./: .commit_template  .gitignore  .pre-commit-config.yaml  README.md  huggingface_download.py  huggingface_upload.py  init.sh  logging_test.py  main.py  mongodb_test.py  pyproject.toml  requirements.txt  test.ipynb  test_embedding.ipynb  test_inference.ipynb  이력서_test.ipynb
.github/: pull_request_template.md
Azure/: .funcignore  execute.sh  function_app.py  keyword_model.py  model.py  query_model.py  requirements.txt  reranking_model.py
configs/: bllossom_config.json  config.json  gpt_config.json  mongo_config.json
data/: BatchClient.py  README.md  chunking_elasticsearch.ipynb  chunking_elasticsearch_openai.ipynb  consultation_documents_filtered2022.jsonl  cralwer.ipynb  crawler.ipynb  crawler2.ipynb  data.py  exp00.csv  exp01.csv  exp01.jsonl  exp02.csv  exp02.jsonl  exp02_revised.csv  exp03.csv  exp03_bge_m3.csv  exp03_dongjin.csv  exp03_klue.csv  exp04.csv  extended_metrics_evaluation_results_20250916_202841.csv  extended_metrics_evaluation_results_20250916_203357.csv  helloworld_test_query.csv  helloworld_test_query_with_translation_20250910_010300.csv  helloworld_test_query_with_translation_20250916_192212.csv  helloworld_test_query_with_translation_query_20250923_212721.csv  helloworld_test_query_with_translation_query_20250930_191253.csv  helloworld_test_query_with_translation_query_20251014_000434.csv  jisikin_filtered.jsonl  keyword_hybrid_evaluation_results_20250916_205256.csv  keyword_hybrid_evaluation_results_20250916_210409.csv  klac.jsonl  make_es_database.py  make_mongodb.py  make_mongodb_openai.py  make_testset.ipynb  prefect_crawl_test.py  (+7 more)
gradio/: README.md  (+2 more)
(+4423 files in other folders)
