[project]
name = "helloworld-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "certifi==2025.8.3",
    "cfgv==3.4.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.15",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "executing==2.2.0",
    "filelock==3.18.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "identify==2.6.13",
    "idna==3.10",
    "ipykernel==6.30.0",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.10.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "nodeenv==1.9.1",
    "numpy==2.3.2",
    "openai==1.107.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "parso==0.8.4",
    "platformdirs==4.3.8",
    "pre-commit==4.3.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pymongo==4.13.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "virtualenv==20.33.1",
    "wcwidth==0.2.13",
]
